gcc/testsuite/obj-c++.dg/tls/diag-5.mm
/* __thread specifiers on empty declarations.  */
/* { dg-require-effective-target tls } */

__thread struct foo; /* { dg-error "qualifiers can only be specified for objects and functions" } */
